# canto-tts

./: .dockerignore  .gitignore  README.md  README_PYPI.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: DEPLOY.md  DEPLOY.zh-hk.md
examples/: quickstart.py
scripts/: export_onnx.py  quantize_int8.py
src/canto_tts/: __init__.py  cli.py  hub.py  quality.py
src/canto_tts/api/: __init__.py  app.py
src/canto_tts/api/static/: playground.css  playground.js
src/canto_tts/api/templates/: index.html
src/canto_tts/backends/: __init__.py  base.py  factory.py  onnx_backend.py  torch_backend.py
src/canto_tts/core/: __init__.py  cantophon.py  control_schema.py  prompting.py
tests/: test_api.py  test_onnx_backend.py  test_quality.py
